--- a/css/style.css
+++ b/css/style.css
@@ -1,100 +1,177 @@
 /*------------------Обнулення-----------------------------------*/
-li{
+li {
     list-style: none;
 }
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-margin: 0;
-padding: 0;
-border: 0;
-outline: 0;
-font-size: 100%;
-vertical-align: baseline;
-background: transparent;
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
 }
+
 body {
-line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
+
 :focus {
-outline: 0;
+    outline: 0;
 }
+
 ins {
-text-decoration: none;
+    text-decoration: none;
 }
+
 del {
-text-decoration: line-through;
+    text-decoration: line-through;
 }
+
 table {
-border-collapse: collapse;
-border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-a{
+
+a {
     text-decoration: none;
     color: #fff;
 }
+
 /*-------------------Шапка---------------------------------*/
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(58, 48, 48);
     color: #fff;
     padding-bottom: 50px;
+    background-color: #2D2727;
     height: 100vh;
 }
-.wrapper{
+
+.wrapper {
     min-height: 100%;
     display: flex;
     flex-direction: column;
 }
+
 .title {
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
 }
+
 .container {
     max-width: 1170px;
     margin: 0 auto;
 }
-.header__container{
+
+.header__container {
     padding: 0 15px;
 }
+
 .header__content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     min-height: 60px;
 }
+
 .header__title {
     font-size: 20px;
 }
-.fa-video-camera:before, .fa-video:before {
+
+.fa-video-camera:before,
+.fa-video:before {
     content: "\f03d";
     margin-right: 5px;
 }
-.header__input{
+
+.header__input {
     padding: 10px;
     border-radius: 4px;
     border: none;
 }
-.header__input::placeholder{
+
+.header__input::placeholder {
     font-size: 17px;
     color: rgb(58, 48, 48);
 }
+
 .header__search {
     position: relative;
 }
+
 .header__submit {
     position: absolute;
     height: 100%;
@@ -105,16 +182,20 @@ body {
     right: 0;
     cursor: pointer;
 }
-.fa-magnifying-glass:before, .fa-search:before {
+
+.fa-magnifying-glass:before,
+.fa-search:before {
     content: "\f002";
     font-size: 17px;
     color: rgb(58, 48, 48);
 }
+
 /*------------------------MAIN--------------------------------------------*/
-.main{
+.main {
     flex: 1 1 auto;
 }
-.preloader__container{
+
+.preloader__container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -124,15 +205,18 @@ body {
     right: 0;
     bottom: 0;
 }
-.main__container{
+
+.main__container {
     padding: 0 15px;
     text-align: center;
 }
-.main__title{
+
+.main__title {
     font-size: 20px;
     color: yellow;
     letter-spacing: 2px;
 }
+
 .main__movies {
     display: flex;
     width: 100%;
@@ -141,24 +225,29 @@ body {
     justify-content: space-around;
     padding: 30px 0;
 }
+
 .main__movie {
     margin: 20px 0;
     width: 200px;
 }
-.movie__img{
+
+.movie__img {
     width: 200px;
     height: 300px;
     cursor: pointer;
     position: relative;
 }
+
 .main__movie-bottom {
     margin-top: 5px;
     max-width: 100%;
 }
+
 .main__movie-title {
     margin-bottom: 5px;
     cursor: pointer;
 }
+
 .main__movie-type {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
@@ -172,30 +261,37 @@ body {
     justify-content: center;
     gap: 5px;
 }
-.page-item{
+
+.page-item {
     padding: 6px;
 }
-.page-item-cd{
+
+.page-item-cd {
     padding: 0;
     padding-top: 6px;
 }
-.page-link{
+
+.page-link {
     font-size: 20px;
     cursor: pointer;
 }
 
-.page-link:hover{
+.page-link:hover {
     color: yellow;
 }
+
 .page__link--active {
     color: yellow;
 }
-.page-item__points::after{
+
+.page-item__points::after {
     content: ' . . .';
 }
-.hidden{
+
+.hidden {
     display: none;
 }
+
 /*----------------------------------modal------------------------------------*/
 .modal {
     display: none;
@@ -208,15 +304,15 @@ body {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.5);
     transition: width 2s;
-  }
-  
-  .modal--show {
+}
+
+.modal--show {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .modal__card {
+}
+
+.modal__card {
     max-width: 600px;
     padding: 16px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
@@ -224,33 +320,47 @@ body {
     color: #ffffff;
     display: flex;
     flex-direction: column;
-  }
-  
-  .modal__movie-backdrop {
+}
+
+.modal__movie-backdrop {
     width: 200px;
     margin: 0 auto;
     margin-bottom: 10px;
-  }
-  
-  .modal__movie-info {
+}
+
+.modal__movie-info {
     margin-left: 20px;
-  }
-  
-  .modal__button-close {
+}
+
+.modal__button-close {
     padding: 5px;
     margin: 10px;
     align-self: center;
-  }
-  
-  .modal__movie-site {
+}
+
+.modal__movie-site {
     color: #ffd80e
-  }
-  
-  ul li {
+}
+
+ul li {
     padding: 5px;
-  }
-  
-  .stop-scrolling {
+}
+
+.stop-scrolling {
     height: 100%;
     overflow: hidden;
-  }
+}
+
+.error {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2D2727;
+    
+
+}
