--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     color: #fff;
     padding-bottom: 50px;
-    background-color: #2D2727;
+    background-color: #182531;
     height: 100vh;
 }
 
@@ -229,6 +229,8 @@ body {
 .main__movie {
     margin: 20px 0;
     width: 200px;
+    background-color: #0C151D;
+    border: 2px solid #455461
 }
 
 .movie__img {
@@ -239,8 +241,9 @@ body {
 }
 
 .main__movie-bottom {
-    margin-top: 5px;
+    margin: 5px 0;
     max-width: 100%;
+
 }
 
 .main__movie-title {
@@ -251,7 +254,7 @@ body {
 .main__movie-type {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    color: yellow;
+    color: #ffffa7;
 }
 
 
@@ -260,10 +263,13 @@ body {
     display: flex;
     justify-content: center;
     gap: 5px;
+    padding: 30px 0 50px;
+
 }
 
 .page-item {
     padding: 6px;
+    font-size: 30px;
 }
 
 .page-item-cd {
@@ -316,12 +322,18 @@ body {
     max-width: 600px;
     padding: 16px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
-    background-color: #1a191f;
+    background-color: #182531;
     color: #ffffff;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
-
+@media (max-width: 768px)  {
+    .stop-scrolling {
+        height: 100%;
+        position: fixed;
+    }
+}
 .modal__movie-backdrop {
     width: 200px;
     margin: 0 auto;
@@ -333,13 +345,31 @@ body {
 }
 
 .modal__button-close {
-    padding: 5px;
     margin: 10px;
     align-self: center;
+    background: #150c0c;
+    color: rhite;
+    color: white;
+    font-size: 16px;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+}
+.modal__button-close:hover {
+    background: #251515;
 }
 
 .modal__movie-site {
     color: #ffd80e
+}
+.modal__movie-close-icon{
+    font-size: 30px;
+    position: absolute;
+    top: 10px;
+    color: #fff;
+    cursor: pointer;
+    right: 15px;
 }
 
 ul li {
@@ -360,7 +390,7 @@ ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2D2727;
+    background-color: #182531;
     
 
 }
